# zimpl

./: .cvsignore  .gitignore  AGENTS.md  CHANGELOG  CMakeLists.txt  Makefile  Makefile.nmake  README  TODO  compile_commands.json  ineq.c  makedist.sh  updatedates.sh  updateversion.sh  var.c  zimpl-config.cmake.in
check/: bool.lp.ref  bool.tbl.ref  bool.zpl  check.sh  condit.lp.ref  condit.tbl.ref  condit.zpl  define.lp.ref  define.zpl  expr.lp.ref  expr.tbl.ref  expr.zpl  minlp.pip.ref  minlp.zpl  param.lp.ref  param.tbl.ref  param.zpl  presol.hum.ref  presol.mps.ref  presol.mst.ref  presol.ord.ref  presol.tbl.ref  presol.zpl  print.out.ref  print.zpl  qubo.lp.2.ref  qubo.q.ref  qubo.q0cp.ref  qubo.q0cp.tbl.ref  qubo.tbl.ref  qubo.zpl  qubo2miqp.zpl  read.lp.ref  read.zpl  set.lp.ref  set.tbl.ref  set.zpl  sos.sos.ref  sos.zpl  subto.lp.ref  (+11 more)
check/errors/: e106.err.ref  e108.err.ref  e109.err.ref  e110.err.ref  e110.zpl  e110_1.zpl  e110_2.zpl  e118.err.ref  e118.zpl  e118_1.zpl  e118_2.zpl  e118_3.zpl  e119.err.ref  e119.zpl  e119_1.zpl  e119_2.zpl  e119_3.zpl  e119_4.zpl  e120.err.ref  e120.zpl  e120_1.zpl  e120_2.zpl  e120_3.zpl  e120_4.zpl  e121.err.ref  e122.err.ref  e122.zpl  e123.err.ref  e124.err.ref  e125.err.ref  e126.err.ref  e126.zpl  e126_1.err.ref  e126_1.zpl  e126_2.err.ref  e126_2.zpl  e130.err.ref  e130.zpl  e133_1.err.ref  e133_2.err.ref  (+95 more)
check/errors/Attic/: e105.err.ref  e121.zpl
check/warnings/: w139.zpl  w140.zpl  w160.zpl  w162.zpl  w164.zpl  w164_1.zpl  w164_2.zpl  w167.zpl  w186.warn.ref  w186.zpl  w186_1.zpl  w186_2.warn.ref  w186_2.zpl  w187.warn.ref  w187.zpl  w187_1.zpl  w187_2.warn.ref  w187_2.zpl  w200.warn.ref  w200.zpl  w205.zpl  w206.zpl  w213.warn.ref  w213.zpl  w215.zpl  w600.warn.ref
cmake/Modules/: FindPCRE.cmake
contrib/alex/: A_M60S6  A_M6S3  F_P10L8  F_P2L2  K_M60S2  K_M6S2  b_P10S6B16  b_P2S3B4  c_M6S3P2T4  pep_M60S6P10T27.zpl  pep_M6S3P2T4.lp  pep_M6S3P2T4.tbl  pep_M6S3P2T4.zpl  u_T27  u_T4
doc/: .cvsignore  .gitignore  .ispell_english  Makefile  docu.c  stexample.dot  stexample.eps  zimpl.bib  zimpl.dxy  zimpl.man  zimpl.tex  zimplerr.tex  zimplfaq.tex  zimplug.tex
example/: chvatal_diet.zpl  ex1.zpl  ex2.zpl  ex4.zpl  facility_location.zpl  queens1.zpl  queens2.zpl  queens3.zpl  queens4.zpl  queens5.zpl  steinerbaum.zpl  tsp.zpl  tsp1.zpl  tspcut.zpl  tspste.zpl
extra/: zcplex.c
lint/posix/: regex.h  stdlib.h  string.h
make/: make.aix.pwr4.ibm.dbg  make.aix.pwr4.ibm.dbg~  make.aix.pwr4.ibm.opt  make.aix.pwr4.ibm.opt~  make.cygwin.x86.gnu.dbg  make.cygwin.x86.gnu.opt  make.cygwin_nt.x86.gnu.dbg  make.darwin.arm.clang.dbg  make.darwin.arm.clang.opt  make.darwin.arm.gnu.dbg  make.darwin.arm.gnu.opt  make.darwin.ppc.gnu.dbg  make.darwin.ppc.gnu.opt  make.darwin.x86.gnu.dbg  make.darwin.x86.gnu.opt  make.darwin.x86.intel.dbg  make.darwin.x86.intel.opt  make.darwin.x86_64.gnu.dbg  make.darwin.x86_64.gnu.opt  make.freebsd.x86.gnu.opt  make.hp-ux.hppa.hp.dbg  make.hp-ux.hppa.hp.opt  make.irix.mips.sgi.dbg  make.irix.mips.sgi.opt  make.linux.arm.clang.dbg  make.linux.arm.clang.opt  make.linux.arm.gnu.dbg  make.linux.arm.gnu.gcov  make.linux.arm.gnu.opt  make.linux.x86.gnu.dbg  make.linux.x86.gnu.gcov  make.linux.x86.gnu.opt  make.linux.x86.gnu.opt-gccold  make.linux.x86.gnu.opt-p4  make.linux.x86.gnu.prf  make.linux.x86.gnu.valgrind  make.linux.x86.intel.dbg  make.linux.x86.intel.opt  make.linux.x86.intel.opt-p4  make.linux.x86_64.clang.dbg  (+30 more)
make/Attic/: make.sunos.x86.dbg  make.sunos.x86.opt
make/local/: make.berni1-en0  make.breg01a-en0  make.breg02a-en0  make.htc015  make.htc015.zib.de  make.lachs  make.macbook-pro-von-thorsten.local  make.onyx3  make.opt40  make.opt40.mingw-cross  make.opt9  make.opt98  make.opt98.zib.de  make.rei  make.se3
project/zimpl/: zimpl.bib  zimpl.xml
scripts/: makedist.sh  updateversion.sh
speed/: speed.zpl
src/: .cvsignore  CMakeLists.txt  Makefile  TODO  blkmem.c  blkmem.h  bool.h  bound.c  bound.h  code.c  code.h  conname.c  conname.h  cppcheck.txt  define.c  define.h  depend  elem.c  elem.h  entry.c  entry.h  gmpmisc.c  gmpmisc.h  hash.c  hash.h  heap.c  heap.h  idxset.c  idxset.h  inst.c  inst.h  iread.c  lint.h  list.c  list.h  load.c  local.c  local.h  lpfwrite.c  lpstore.c  (+78 more)
src/Attic/: mmlparse2.y  mono.c  mono.h  rathumwrite.c  term2.c
src/WIN/: getopt.c  unistd.h
src/zimpl/: attribute.h  blkmem.c  blkmem.h  bool.h  bound.c  bound.h  code.c  code.h  conname.c  conname.h  define.c  define.h  elem.c  elem.h  entry.c  entry.h  gmpmisc.c  gmpmisc.h  hash.c  hash.h  heap.c  heap.h  idxset.c  idxset.h  inst.c  inst.h  iread.c  lib.c  lib.h  lint.h  list.c  list.h  load.c  local.c  local.h  metaio.c  metaio.h  mme.h  mmlparse2.y  mmlscan.l  (+57 more)
talk/: def.tex  matheon-logo.eps  zib-logo.eps  zimpl-pittsburgh.tex
test/: Makefile  dotest.sh  ex2.zpl  ex3.zpl  getcplexresult.awk  mcaflow1.zpl  testall.zpl  testdata.zpl  tkat2.zpl
vortrag/: vortrag.tex  ziblogo2.eps
web/: index.html  index.php  zimpl-1.05.tgz  zimpl.css  zimpl.php
web/download/: .htaccess  CHANGELOG.txt  header.html  zimpl-1.00.tgz  zimpl-1.01.tgz  zimpl-1.02.tgz  zimpl-1.03.tgz  zimpl-1.04.tgz  zimpl-2.00.tgz  zimpl-2.01.tgz  zimpl-2.02.tgz  zimpl-2.03.tgz  zimpl-2.04.tgz  zimpl-2.05.tgz
